# effectful-contrib

./: .gitignore  .hlint.yaml  .stylish-haskell.yaml  Makefile  README.md  cabal.project  tags  tags.mtime
.github/workflows/: ci.yml
effectful-cache/: README.md  effectful-cache.cabal
effectful-cache/src/Data/Cache/: Effect.hs
effectful-cache/src/Effectful/: Cache.hs
effectful-cache/test/: Main.hs
effectful-co-log/: CHANGELOG.md  effectful-co-log.cabal
effectful-co-log-core/: effectful-co-log-core.cabal
effectful-co-log-core/src/Effectful/Colog/: Core.hs
effectful-co-log-core/src/Effectful/Colog/Core/: Effect.hs  IO.hs
effectful-co-log-core/test/: Spec.hs
effectful-co-log/src/Effectful/: Colog.hs
effectful-co-log/src/Effectful/Colog/: Actions.hs  Concurrent.hs  Message.hs  Pure.hs
effectful-co-log/test/: Spec.hs
effectful-crypto-rng/: .gitignore  README.md  effectful-crypto-rng.cabal
effectful-crypto-rng/src/Effectful/Crypto/: RNG.hs
effectful-crypto-rng/src/Effectful/Crypto/RNG/: Dynamic.hs
effectful-crypto-rng/test/: Dynamic.hs  Main.hs  Static.hs
effectful-log-base/: README.md  effectful-log-base.cabal
effectful-log-base/examples/: StdoutExample.hs
effectful-log-base/src/Effectful/: Log.hs
effectful-log-base/src/Effectful/Log/: Logger.hs
effectful-log-base/src/Effectful/Log/Backend/: LogList.hs  StandardOutput.hs  Text.hs
effectful-log-base/src/Effectful/Log/Backend/StandardOutput/: Bulk.hs
effectful-log-base/test/: Main.hs
effectful-log-elasticsearch/: README.md  effectful-log-elasticsearch.cabal
effectful-log-elasticsearch/src/Effectful/Log/Backend/: ElasticSearch.hs
effectful-log-postgres/: README.md  effectful-log-postgres.cabal
effectful-log-postgres/src/Effectful/Log/Backend/: PostgreSQL.hs
effectful-optics/: effectful-optics.cabal
effectful-optics/src/Effectful/Reader/Static/: Optics.hs
effectful-optics/src/Effectful/State/Dynamic/: Optics.hs
effectful-optics/src/Effectful/State/Static/Local/: Optics.hs
effectful-optics/src/Effectful/State/Static/Shared/: Optics.hs
effectful-time/: README.md  effectful-time.cabal
effectful-time/src/Data/Time/: Effect.hs
effectful-time/src/Effectful/: Time.hs
effectful-time/test/: Main.hs  Utils.hs
effectful-typed-process/: README.md  effectful-typed-process.cabal
effectful-typed-process/example/: Main.hs
effectful-typed-process/src/Effectful/Process/: Typed.hs
effectful-typed-process/test/: Main.hs  Utils.hs
