cabal-version:      3.0
name:               effectful-co-log
version:            0.1.0.0
homepage:           https://github.com/Kleidukos/effectful-contrib#readme
bug-reports:        https://github.com/Kleidukos/effectful-contrib/issues
author:             Ambros Lins
maintainer:         ambros.lins@gmail.com
license:            MIT
build-type:         Simple

extra-source-files: 
  CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/Kleidukos/effectful-contrib

common common
  default-language: Haskell2010
  ghc-options:
    -Wall
    -rtsopts
    -threaded
    -with-rtsopts=-N

library
  import: common
  hs-source-dirs:   src
  exposed-modules:  
    MyLib
  build-depends:    
    base ^>=4.14.3.0

test-suite effectful-co-log-test
  import: common
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          MyLibTest.hs
  build-depends:    base ^>=4.14.3.0
