cabal-version:    3.0
name:             effectful-log-postgres
version:          0.0.1.0
homepage:         https://github.com/Kleidukos/effectful-contrib#readme
bug-reports:      https://github.com/Kleidukos/effectful-contrib/issues
author:           Dominik Peteler
maintainer:       Dominik Peteler
license:          BSD-3-Clause
build-type:       Simple
extra-source-files:
    CHANGELOG.md
    LICENSE.md
    README.md

source-repository head
  type: git
  location: https://github.com/Kleidukos/effectful-contrib

common language
  ghc-options: -Wall -Wcompat

  default-language: Haskell2010

  default-extensions:  DataKinds
                       FlexibleContexts
                       TypeOperators

library
  import: language

  ghc-options: -O2

  hs-source-dirs: src

  exposed-modules:
    Effectful.Log.Backend.PostgreSQL

  build-depends:    base <= 4.17
                  , effectful-core
                  , effectful-log-base
                  , hpqtypes
                  , log-base
                  , log-postgres
                  , text
